School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_obj/testDivideByZero.deca
{
    int i = 10/0;
    float f = 10.0/0;
}