School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_declarations/test_incompType.deca
//test qui invalide les déclarations de type
{
    int wrong_int = 1.1;
    float wrong_float = 10;
    boolean wrong_bool = 0;
}